--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,7 @@ sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 pydantic==2.4.2
 alembic==1.12.1
+fastapi-jwt-auth==0.5.0
+python-jose[cryptography]==3.3.0
+httpx==0.24.1
+python-multipart==0.0.6
