--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "jwt-decode": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
